ci: Workflow Bot -- Update ALL Dependencies

--- a/integration-tests/snapshots/mdx-js/mdx/report.yaml
+++ b/integration-tests/snapshots/mdx-js/mdx/report.yaml
@@ -3,14 +3,14 @@ Repository: mdx-js/mdx
 Url: https://github.com/mdx-js/mdx
 Args: ["--config=${repoConfig}/cspell.json","**/*.*"]
 Summary:
-  files: 196
-  filesWithIssues: 98
-  issues: 887
+  files: 167
+  filesWithIssues: 99
+  issues: 1097
   errors: 0
 Errors: []
 
 issues: 
-  - "docs/_asset/index.client.js:9:9     	nljson  	U   	const nljson = document.querySelector"
+  - "docs/_asset/index.client.js:10:9    	nljson  	U   	const nljson = document.querySelector"
   - "docs/_asset/index.css:2:37      	blinkmacsystemfont  	U   	system-ui, -apple-system, blinkmacsystemfont, 'Segoe UI', helvetica"
   - "docs/_asset/index.css:5:26      	Bitstream           	U   	DejaVu Sans Mono', 'Bitstream Vera Sans Mono', monospace"
   - "docs/_asset/index.css:40:35     	liga                	U   	feature-settings: 'kern', 'liga', 'clig', 'calt';"
@@ -29,8 +29,8 @@ issues:
   - "docs/_component/editor.client.js:39:11      	rehype      	U   	rehypePlugins: [capture('hast"
   - "docs/_component/editor.client.js:40:11      	recma       	U   	recmaPlugins: [capture('esast"
   - "docs/_component/editor.client.js:40:35      	esast       	U   	recmaPlugins: [capture('esast')]"
-  - "docs/_component/icon/github.server.js:13:15     	currentcolor	U   	fill=\"currentcolor\""
-  - "docs/_component/icon/open-collective.server.js:6:28     	opencollective  	U   	className=\"icon icon-opencollective\""
+  - "docs/_component/icon/github.server.js:14:13     	currentcolor	U   	fill=\"currentcolor\""
+  - "docs/_component/icon/open-collective.server.js:7:26     	opencollective  	U   	className=\"icon icon-opencollective\""
   - "docs/_component/table-of-components.server.mdx:24:92    	strikethrough   	U   	| `~~strikethrough~~`"
   - "docs/_config.js:1:22    	VERCEL  	U   	/ To do: note that `VERCEL_*` env variables aren"
   - "docs/_config.js:2:35    	vercel  	U   	suspecting that’s because `vercel.json` is used rather"
@@ -159,6 +159,40 @@ issues:
   - "docs/mdx.server.mdx:39:6    	Blazingly       	U   	🔥 **Blazingly blazing fast**: MDX"
   - "docs/mdx.server.mdx:45:9    	chrisbiscardi   	U   	> — [**@chrisbiscardi**][quote]"
   - "docs/migrating/v1.server.mdx:48:28      	usecases	U   	shouldn’t affect most usecases, however if you’re nesting"
+  - "docs/packages/esbuild.server.md:1:12    	esbuild     	U   	# `@mdx-js/esbuild`"
+  - "docs/packages/esbuild.server.md:19:28   	mdxoptions  	U   	[`mdx(options?)`](#mdxoptions)"
+  - "docs/packages/esbuild.server.md:64:3    	outfile     	U   	outfile: 'output.js',"
+  - "docs/packages/esbuild.server.md:83:5    	esbuild’s   	U   	See esbuild’s docs for more info."
+  - "docs/packages/loader.server.md:34:5     	runtimes	U   	JSX runtimes (such as Vue)."
+  - "docs/packages/loader.server.md:67:37    	mkdn    	U   	.(md|markdown|mdown|mkdn|mkd|mdwn|mkdown|ron"
+  - "docs/packages/loader.server.md:67:46    	mdwn    	U   	markdown|mdown|mkdn|mkd|mdwn|mkdown|ron|mdx)$/,"
+  - "docs/packages/loader.server.md:67:51    	mkdown  	U   	mdown|mkdn|mkd|mdwn|mkdown|ron|mdx)$/,"
+  - "docs/packages/mdx.server.md:20:38   	compilefile             	U   	compile(file, options?)`](#compilefile-options)"
+  - "docs/packages/mdx.server.md:21:42   	compilesyncfile         	U   	ompileSync(file, options?)`](#compilesyncfile-options)"
+  - "docs/packages/mdx.server.md:22:38   	evaluatefile            	U   	evaluate(file, options)`](#evaluatefile-options)"
+  - "docs/packages/mdx.server.md:23:42   	evaluatesyncfile        	U   	valuateSync(file, options)`](#evaluatesyncfile-options)"
+  - "docs/packages/mdx.server.md:24:39   	createprocessoroptions  	U   	createProcessor(options)`](#createprocessoroptions)"
+  - "docs/packages/mdx.server.md:40:24   	vite                    	U   	next) or build system (vite, snowpack) which comes"
+  - "docs/packages/mdx.server.md:114:45  	jsxs                    	U   	Fragment, jsx as _jsx, jsxs as _jsxs} from 'react"
+  - "docs/packages/mdx.server.md:191:62  	tasklists               	U   	Tables, strikethrough, tasklists, literal URLs."
+  - "docs/packages/mdx.server.md:279:22  	eval                    	U   	to code that can be `eval`ed."
+  - "docs/packages/mdx.server.md:452:22  	QAAQ                    	U   	mappings: ';;aAAaA,QAAQ;YAAQ;;;;;;;;iBAE3B'"
+  - "docs/packages/mdx.server.md:452:27  	YAAQ                    	U   	mappings: ';;aAAaA,QAAQ;YAAQ;;;;;;;;iBAE3B',"
+  - "docs/packages/mdx.server.md:611:31  	compat                  	U   	pragmaImportSource: 'preact/compat'"
+  - "docs/packages/mdx.server.md:873:18  	optionsoutputformat     	U   	[outputformat]: #optionsoutputformat"
+  - "docs/packages/mdx.server.md:875:13  	optionsbaseurl          	U   	[baseurl]: #optionsbaseurl"
+  - "docs/packages/mdx.server.md:877:22  	optionsusedynamicimport 	U   	usedynamicimport]: #optionsusedynamicimport"
+  - "docs/packages/node-loader.server.md:22:37   	createloaderoptions 	U   	createLoader(options?)`](#createloaderoptions)"
+  - "docs/packages/preact.server.md:20:34    	mdxproviderprops            	U   	MDXProvider(props?)`](#mdxproviderprops)"
+  - "docs/packages/preact.server.md:21:44    	usemdxcomponentscomponents  	U   	MDXComponents(components?)`](#usemdxcomponentscomponents)"
+  - "docs/packages/preact.server.md:22:25    	mdxcontext                  	U   	* [`MDXContext`](#mdxcontext)"
+  - "docs/packages/preact.server.md:23:43    	withmdxcomponentscomponent  	U   	thMDXComponents(Component)`](#withmdxcomponentscomponent)"
+  - "docs/packages/remark-mdx.server.md:20:39    	unifieduseremarkmdx 	U   	).use(remarkMdx)`](#unifieduseremarkmdx)"
+  - "docs/packages/remark-mdx.server.md:115:27   	mdxjs               	U   	micromark-extension-mdxjs-esm`](https://github"
+  - "docs/packages/remark-mdx.server.md:118:22   	autolinks           	U   	— Turn off HTML, autolinks, and indented code"
+  - "docs/packages/rollup.server.md:31:17    	Vite        	U   	Rollup, such as Vite)."
+  - "docs/packages/rollup.server.md:88:11    	picomatch   	U   	List of [`picomatch`][pico] patterns to"
+  - "docs/packages/vue.server.md:21:33   	usemdxcomponents	U   	useMDXComponents()`](#usemdxcomponents)"
   - "docs/projects.server.mdx:5:6        	demoboard   	U   	* [demoboard][]: The simplest editor"
   - "docs/projects.server.mdx:10:6       	docz        	U   	* [docz][]: Documentation framework"
   - "docs/projects.server.mdx:17:6       	MDNEXT      	U   	* [MDNEXT][]: An ecosystem of"
@@ -166,49 +200,37 @@ issues:
   - "docs/projects.server.mdx:25:17      	smrtrt      	U   	* [SmartRate][smrtrt]"
   - "docs/projects.server.mdx:60:2       	mdnext      	U   	[mdnext]: https://github.com"
   - "docs/support.server.mdx:44:52   	rubberduck  	U   	duck debugging method][rubberduck]"
-  - "packages/loader/readme.md:110:23    	mdxjs   	U   	See [Contributing on `mdxjs.com`][contributing]"
+  - "packages/esbuild/lib/index.js:22:9      	extnames    	U   	import {extnamesToRegex} from '@mdx-js"
+  - "packages/esbuild/lib/index.js:70:62     	onloadremote	U   	namespace: remoteNamespace}, onloadremote)"
   - "packages/mdx/lib/core.js:3:32       	Pluggable   	U   	typedef {import('unified').PluggableList} PluggableList"
   - "packages/mdx/lib/core.js:4:51       	Recma       	U   	recma-document.js').RecmaDocumentOptions} RecmaDocument"
   - "packages/mdx/lib/core.js:25:14      	Rehype      	U   	import remarkRehype from 'remark-rehype"
   - "packages/mdx/lib/evaluate.js:23:10      	compiletime 	U   	const {compiletime, runtime} = resolveEvaluateOp"
-  - "packages/mdx/lib/plugin/recma-document.js:27:79     	runtimes    	U   	import automatic JSX runtimes from (used in automatic"
   - "packages/mdx/lib/plugin/recma-document.js:34:21     	Estree      	U   	import {positionFromEstree} from 'unist-util-position"
-  - "packages/mdx/lib/plugin/recma-document.js:424:17    	declarators 	U   	const declarators = node.specifiers"
-  - "packages/mdx/lib/plugin/recma-jsx-build.js:24:35    	jsxs	U   	generated, and get `jsx`, `jsxs`, and `Fragment` from"
+  - "packages/mdx/lib/plugin/recma-document.js:422:17    	declarators 	U   	const declarators = node.specifiers"
   - "packages/mdx/lib/plugin/recma-stringify.js:21:27    	astring 	U   	typedef {Omit<import('astring').State, 'write'> &"
   - "packages/mdx/lib/plugin/recma-stringify.js:170:63   	curlies 	U   	ionContainer`, which does the curlies)"
-  - "packages/mdx/lib/util/create-format-aware-processors.js:9:26    	extnames	U   	import {md, mdx} from './extnames.js'"
-  - "packages/mdx/readme.md:47:38    	organisation	U   	with this repository, organisation, or community you agree"
-  - "packages/mdx/test/index.test.jsx:102:17     	fnref       	U   	id=\"fnref1\""
-  - "packages/mdx/test/index.test.jsx:103:23     	noteref     	U   	role=\"doc-noteref\""
-  - "packages/mdx/test/index.test.jsx:117:69     	backlink    	U   	footnote-back\" role=\"doc-backlink\">"
-  - "packages/mdx/test/index.test.jsx:143:36     	mathml      	U   	span className=\"katex-mathml\">"
-  - "packages/mdx/test/index.test.jsx:146:20     	mrow        	U   	<mrow>"
-  - "packages/mdx/test/index.test.jsx:159:34     	mord        	U   	<span className=\"mord mathnormal\">x</span"
-  - "packages/mdx/test/index.test.jsx:159:39     	mathnormal  	U   	span className=\"mord mathnormal\">x</span>"
-  - "packages/mdx/test/index.test.jsx:185:53     	vfile’s     	U   	VFileCompatible` to set the vfile’s path', async () =>"
-  - "packages/remark-mdx/test/fixtures/block-parsing.json:912:24     	quasis  	U   	\"quasis\": ["
-  - "packages/remark-mdx/test/fixtures/block-parsing.json:1148:21    	Weeeeee 	U   	\"value\": \"Weeeeee!\","
-  - "packages/remark-mdx/test/fixtures/character-reference.json:102:16   	blockquote  	U   	\"type\": \"blockquote\","
-  - "packages/remark-mdx/test/fixtures/examples-from-react-accessibility.json:3161:29    	haspopup	U   	\"name\": \"aria-haspopup\","
-  - "packages/remark-mdx/test/fixtures/examples-from-react-accessibility.out:9:13    	onchange	U   	onChange={onchangeHandler}"
-  - "packages/remark-mdx/test/fixtures/examples-from-react-jsx-in-depth.json:2461:21 	todos   	U   	\"value\": \"todos.map((message) => <Item"
-  - "packages/remark-mdx/test/fixtures/interleaving.json:1155:58 	divs    	U   	be an h1 inside two divs\","
-  - "packages/remark-mdx/test/fixtures/interleaving.json:2810:41 	Subthing	U   	\"value\": \"Subthing and this word is \","
-  - "packages/remark-mdx/test/fixtures/interleaving.json:2913:49 	subthing	U   	\"value\": \"Another subthing with a \","
-  - "packages/remark-mdx/test/index.js:458:47    	tefg    	U   	Alpha <b c d=\"d\"\	\	efg=\\'e\\'>charlie</b>.'"
-  - "packages/remark-mdx/test/index.js:880:59    	apos    	U   	can be used: &quot;, &apos;, &lt;, &gt;, &#x7B"
-  - "packages/remark-mdx/test/index.js:1561:13   	reparsed	U   	const reparsed = proc.parse(doc)"
-  - "packages/remark-mdx/test/index.js:1582:15   	onvisit 	U   	visit(tree, onvisit)"
-  - "packages/vue/test/test.js:37:89     	vfiles  	U   	supports strings instead of vfiles for run."
+  - "packages/mdx/test/compile.js:35:21      	userland        	U   	// So instead use a userland module."
+  - "packages/mdx/test/compile.js:491:20     	propert         	U   	/Cannot read propert/,"
+  - "packages/mdx/test/compile.js:869:31     	setext          	U   	should support headings (setext) (`=` -> `<h1>`)'"
+  - "packages/mdx/test/compile.js:995:49     	fnref           	U   	class=\"footnote-ref\" id=\"fnref1\" role=\"doc-noteref"
+  - "packages/mdx/test/compile.js:995:67     	noteref         	U   	id=\"fnref1\" role=\"doc-noteref\"><sup>1</sup></a></p"
+  - "packages/mdx/test/compile.js:995:246    	backlink        	U   	footnote-back\" role=\"doc-backlink\">↩</a></li>\\n</ol>\\n"
+  - "packages/mdx/test/compile.js:1267:21    	rexporting      	U   	'should support rexporting something as a default"
+  - "packages/mdx/test/compile.js:1315:33    	uteme           	U   	data-emotion=\"css 16uteme\">.css-16uteme{color"
+  - "packages/mdx/test/compile.js:1384:6     	Extensionless   	U   	// Extensionless imports only work in"
+  - "packages/register/lib/index.cjs:4:7     	deasync 	U   	const deasync = require('deasync'"
+  - "packages/remark-mdx/test/index.js:317:15    	onvisit 	U   	visit(tree, onvisit)"
+  - "packages/rollup/lib/index.js:2:30       	pluginutils 	U   	typedef {import('@rollup/pluginutils').FilterPattern} FilterPatter"
+  - "packages/vue/test/test.js:36:89     	vfiles  	U   	supports strings instead of vfiles for run."
   - "patches/react-server-dom-webpack%2B0.0.0-experimental-7ec4c5597.patch:13:10     	typeof  	U   	$$typeof: MODULE_REFERENCE,"
   - "patches/react-server-dom-webpack%2B0.0.0-experimental-7ec4c5597.patch:43:31     	deps    	U   	// TODO: Hook into deps instead of the target"
-  - "readme.md:104:5     	valign  	U   	<tr valign=\"middle\">"
-  - "script/jsx-loader.js:3:30       	esbuild 	U   	transformSync} from 'esbuild'"
+  - "readme.md:100:5     	valign      	U   	<tr valign=\"middle\">"
+  - "readme.md:158:38    	organisation	U   	with this repository, organisation, or community you agree"
   - "website/generate.server.js:9:9      	globby  	U   	import {globby} from 'globby'"
   - "website/generate.server.js:10:24    	xast    	U   	import {sitemap} from 'xast-util-sitemap'"
   - "website/mdx-config.js:14:14     	Gemoji      	U   	import remarkGemoji from 'remark-gemoji"
   - "website/mdx-config.js:14:34     	gemoji      	U   	remarkGemoji from 'remark-gemoji'"
   - "website/mdx-config.js:26:18     	hastscript  	U   	import {s} from 'hastscript'"
-  - "website/prep.js:78:46   	noindex 	U   	'robots', content: 'noindex'})"
+  - "website/prep.js:79:46   	noindex 	U   	'robots', content: 'noindex'})"
   - "website/prerender.js:34:21      	camelcase   	U   	/* eslint-disable camelcase */"
