Improve the look of releases by nesting commits

--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -27,9 +27,15 @@ categories:
       - $TITLE (#$NUMBER)
 
 change-template: |
-  **➤** $TITLE (#$NUMBER)
-
+  <details>
+  <summary>$TITLE (#$NUMBER)</summary>
+  
+  ### $TITLE (#$NUMBER)
   $BODY
+  
+  ---
+  
+  </details>
 
 change-title-escapes: '\<*_&' # You can add # and @ to disable mentions, and add ` to disable code blocks.
 version-resolver:
