--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -24,7 +24,7 @@ name: &name "Jason Dent" # &name is a YAML anchor which can be *referenced later
 description: >- # this means to ignore newlines until "baseurl:"
   A Spell Checker for Code!
 url: https://streetsidesoftware.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-baseurl: "/cspell" # the subpath of your site, e.g. "/blog"
+baseurl: "/" # the subpath of your site, e.g. "/cspell"
 repository: "streetsidesoftware/cspell"
 github_username: streetsidesoftware
 # twitter_username: jekyllrb
